Changed streamcollection -> toList()